--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3503,11 +3503,13 @@ input, select, textarea {
 				#banner .content header h2 {
 					font-size: 2.5em;
 					margin: 0;
+					text-align: left;
 				}
 
 				#banner .content header p {
 					margin: 0.5em 0 0 0;
 					top: 0;
+					text-align: justify;
 				}
 
 			#banner .content .image {
